# multi-sources-financial-control

./: .coveragerc  .gitignore  .pylintrc  docker-compose.yml  home-page-query-index-analysis.md  manage.py  pyproject.toml  pytest.ini
django/: .gitignore  .renderignore  Dockerfile  Dockerfile.local  Makefile  cron.sh  docker-compose.testing.yml  entrypoint.sh  locustfile.py  manage.py  pyproject.toml  requirements-dev.txt  requirements-production.txt
django/authentication/: admin.py  auth.py  choices.py  fields.py  managers.py  models.py  permissions.py  serializers.py  token_generator.py  urls.py  utils.py  validators.py  views.py
django/authentication/migrations/: 0001_initial.py  0002_auto_20210921_2347.py  0003_auto_20211214_2058.py  0004_integrationsecret_binance_api_key.py  0005_integrationsecret_binance_api_secret.py  0006_integrationsecret_binance_secrets_all_null_or_all_filled.py  0007_customuser_has_asset_price_integration.py  0008_remove_customuser_has_asset_price_integration.py  0009_remove_integrationsecret_cei_secrets_all_null_or_all_filled_and_more.py  0010_alter_customuser_is_active.py  0011_customuser_stripe_customer_id_and_more.py  0012_customuser_is_investments_integrations_module_enabled_and_more.py  0013_alter_customuser_options_and_more.py  0014_alter_customuser_managers_and_more.py  0015_customuser_credit_card_bill_day.py  0016_customuser_planning_preferences.py  0017_customuser_date_of_birth.py
django/authentication/services/: __init__.py  mailing.py  stripe.py  subscription.py  token_generator.py
django/authentication/tests/: conftest.py  test__auth.py  test__auth__views.py  test__queries.py  test__subscription__views.py  test__subscription__webhook.py  test__user__views.py  test_views.py
django/config/: celery.py  key_value_store.py  scripts.py  urls.py  wsgi.py
django/config/settings/: base.py  production.py
django/config/tests/: test__key_value_store.py
django/expenses/: admin.py  choices.py  filters.py  managers.py  models.py  permissions.py  scripts.py  serializers.py  tasks.py  urls.py  views.py
django/expenses/adapters/: __init__.py  sql.py
django/expenses/domain/: commands.py  events.py  exceptions.py  models.py
django/expenses/migrations/: 0002_alter_expense_category.py  0003_alter_expense_options.py  0004_alter_expense_category_alter_expense_source.py  0005_alter_expense_options_expense_installment_number_and_more.py  0006_rename_price_expense_value_revenue.py  0007_alter_expense_value.py  0008_alter_expense_installment_number_and_more.py  0009_alter_expense_value_alter_revenue_value_bankaccount.py  0010_expense_recurring_id_alter_expense_installments_id.py  0011_revenue_recurring_id.py  0012_alter_expense_category_alter_expense_source_and_more.py  0013_revenue_category_revenuecategory_and_more.py  0014_revenuetag_expensetag_expense_tags_revenue_tags_and_more.py  0015_bankaccountsnapshot.py  0016_bankaccount_credit_card_bill_day_and_more.py  0017_backfill_bank_accounts.py  0018_alter_expense_bank_account_and_more.py  0019_add_exclude_from_fire_to_expense_category.py  0020_expense_expenses_ex_user_id_88f6c0_idx_and_more.py  0021_bankaccountsnapshot_expenses_ba_user_id_25b238_idx.py
django/expenses/models/: __init__.py  abstract.py  bank_account.py  expenses.py  revenues.py
django/expenses/service_layer/: handlers.py  messagebus.py  unit_of_work.py
django/expenses/tasks/: __init__.py  bank_account.py  expenses.py  revenues.py
django/expenses/tests/: conftest.py  test__expenses__views.py  test__revenues__views.py  test_tasks.py  test_views.py
django/integrations/b3/: __init__.py
django/revenues/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
django/revenues/migrations/: 0001_initial.py  0002_alter_revenue_value.py  0003_alter_revenue_options.py
django/revenues/tests/: conftest.py  test_views.py
django/shared/: exceptions.py  filters.py  filters_utils.py  managers_utils.py  pagination.py  permissions.py  routers.py  serializers.py  serializers_utils.py  urls.py  utils.py  views.py
django/shared/tests/: __init__.py  conftest.py  test__managers_utils.py  test__patrimony__views.py  test_utils.py
django/tasks/: admin.py  bases.py  choices.py  constants.py  decorators.py  filters.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
django/tasks/migrations/: 0001_initial.py  0002_alter_taskhistory_state.py  0003_auto_20211006_2256.py  0004_taskhistory_error.py  0005_auto_20220119_0153.py  0006_remove_taskhistory_opened_at_and_more.py
django/tasks/tests/: conftest.py  test_history_flow.py  test_views.py
django/variable_income_assets/: admin.py  choices.py  expressions.py  filters.py  managers.py  models.py  permissions.py  scripts.py  serializers.py  tasks.py  urls.py  views.py
django/variable_income_assets/adapters/: __init__.py  key_value_store.py  repositories.py  repository.py  sql.py
django/variable_income_assets/domain/: commands.py  events.py  exceptions.py  models.py
django/variable_income_assets/integrations/: authentication.py  decorators.py  handlers.py  helpers.py  qstash_views.py  schemas.py  views.py
django/variable_income_assets/migrations/: 0002_auto_20210927_2359.py  0003_auto_20211112_1230.py  0004_auto_20211116_0153.py  0005_transaction_external_id.py  0006_transaction_currency.py  0007_auto_20211225_2222.py  0008_auto_20220109_1447.py  0009_alter_transaction_price.py  0010_auto_20220605_1718.py  0011_alter_asset_sector.py  0012_auto_20230315_0112.py  0012_auto_20230323_2218.py  0013_assetmetadata_remove_assetreadmodel_current_price_and_more.py  0014_remove_asset_current_price_and_more.py  0015_remove_assetreadmodel_sector.py  0016_alter_asset_options_alter_passiveincome_options_and_more.py  (+14 more)
fastapi/: Dockerfile  pyproject.toml
fastapi/crawlers/: constants.py  main.py  schemas.py  utils.py
fastapi/tests/: conftest.py  test_fast_api.py
revenues/: .gitignore  .python-version  Dockerfile  Dockerfile.local  Makefile  pyproject.toml
revenues/src/: settings.py
revenues/tests/: conftest.py  test_revenues.py
(+622 files in other folders)
