[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "multi-sources-financial-control"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.2.2"
aiohttp = "^3.8.4"
asgiref = "^3.7.2"
cryptography = "^41.0.1"
django-choices = "^1.7.2"
django-cors-headers = "3.8.0"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "0.17.3"
python = "^3.8"
python-dateutil = "^2.8.2"
python-decouple = "^3.8"
requests = "2.26.0"

[tool.poetry.dev-dependencies]
PyDrive2 = "^1.15.4"
black = "^23.3.0"
factory-boy = "^3.2.1"
pylint-django = "^2.5.3"
pylint-runner = "^0.6.0"
pytest = "6.2.5"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.7"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
locust = "^2.15.1"
pytest-xdist = "^3.1.0"
requests-mock = "^1.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.base"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
omit = [
  "*apps.py",
  "*/migrations/*",
  "*settings*",
  "*/tests/*",
  "*urls.py",
  "*wsgi*",
  "*asgi*",
  "manage.py",
  "locustfile.py",
  "*scripts*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
]
fail_under = 96
