[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["MuriloScarpaSitonio <muriloscarpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-cei-crawler = "0.1.2"
sqlmodel = "0.0.4"
cryptography = "3.4.8"
python-decouple = "3.4"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-binance = "^1.0.15"
python-kucoin = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
bandit = "^1.7.0"
mypy = "^0.910"
pylint-runner = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
